Make mockConnectorPlugin optional in ObjectStoreQueryRunner builder